# cdb2-rs

./: Cargo.toml  README.md
benches/: cdb.rs
fuzzer/: Cargo.toml
fuzzer/src/: main.rs
src/: lib.rs  reader.rs  uint32.rs  writer.rs
tests/: make.rs  read.rs
