[package]
name = "cdb"
version = "0.6.0"
authors = ["Bruce Guenter <bruce@untroubled.org>"]
description = "Pure Rust library to read and write CDB files"
homepage = "https://github.com/bruceg/cdb-rs"
repository = "https://github.com/bruceg/cdb-rs"
readme = "README.md"
license = "Unlicense"
edition = "2021"

[dependencies]
memmap2 = "0.9.1"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "cdb"
harness = false
