[package]
name = "cdb2"
version = "0.7.0-alpha.1"
authors = ["Kan-Ru Chen <kanru@kanru.info>"]
description = "Pure Rust library to read and write CDB files"
homepage = "https://github.com/kanru/cdb2-rs"
repository = "https://github.com/kanru/cdb2-rs"
readme = "README.md"
license = "Unlicense"
edition = "2021"

[dependencies]
memmap2 = "0.9.1"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "cdb"
harness = false
