[package]
name = "cdb2"
version = "0.7.1"
authors = ["Kan-Ru Chen <kanru@kanru.info>"]
description = "Pure Rust library to read and write CDB files"
homepage = "https://github.com/kanru/cdb2-rs"
repository = "https://github.com/kanru/cdb2-rs"
readme = "README.md"
license = "Unlicense"
rust-version = "1.70"
edition = "2021"

[dependencies]
memmap2 = "0.9.1"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.9.0"

[workspace]
members = ["fuzzer"]

[[bench]]
name = "cdb"
harness = false

[profile.fuzzing]
inherits = "release"
debug = true
panic = "abort"
